---
title: Schema conceptuala locala - PDB DISTRIBUTIE (Crow's foot, ELK ortogonal)
config:
  layout: elk
  look: classic
---
erDiagram
  ZONE {
    NUMBER_19 id PK
    VARCHAR2_40 cod_zona UK
    VARCHAR2_80 den_zona "NOT NULL"
    VARCHAR2_10 tip_zona "NOT NULL"
    NUMBER_19 parent_zona_id FK
  }
  AGENTI {
    NUMBER_19 id PK
    VARCHAR2_20 cod_agent UK
    VARCHAR2_100 nume_agent "NOT NULL"
    VARCHAR2_200 email
  }
  CLIENTI {
    NUMBER_19 id PK
    VARCHAR2_60 cod_client UK
    VARCHAR2_200 denumire_client "NOT NULL"
    VARCHAR2_12 tip_client "NOT NULL"
    NUMBER_19 id_zona FK
    DATE start_date "NOT NULL"
    DATE end_date "CHECK > start"
  }
  CLIENTI_CONTACTE {
    VARCHAR2_60 cod_client PK
    VARCHAR2_1000 email_client
    VARCHAR2_1000 email_agent
  }
  INTERVALE_PLATA {
    NUMBER_19 id PK
    VARCHAR2_60 den_interval UK
  }
  INTERVALE_PLATA_ZILE {
    NUMBER_19 id_interval PK
    VARCHAR2_40 per_zile PK
    NUMBER_10 zile_start "NOT NULL"
    NUMBER_10 zile_end
  }
  ZONE_AGENTI {
    NUMBER_19 id PK
    NUMBER_19 id_zona FK
    NUMBER_19 id_agent FK
    DATE start_date "NOT NULL"
    DATE end_date "CHECK > start"
  }
  ZONE_INTERVALE_PLATA {
    NUMBER_19 id PK
    NUMBER_19 id_zona FK
    NUMBER_19 id_interval FK
    DATE start_date "NOT NULL"
    DATE end_date "CHECK > start"
  }

  ZONE                ||--o{ CLIENTI              : "id_zona"
  ZONE                ||--o{ ZONE                 : "parent_zona_id"
  ZONE                ||--o{ ZONE_AGENTI          : "id_zona"
  AGENTI              ||--o{ ZONE_AGENTI          : "id_agent"
  ZONE                ||--o{ ZONE_INTERVALE_PLATA : "id_zona"
  INTERVALE_PLATA     ||--o{ ZONE_INTERVALE_PLATA : "id_interval"
  INTERVALE_PLATA     ||--|{ INTERVALE_PLATA_ZILE : "id_interval"
  CLIENTI             ||--o| CLIENTI_CONTACTE     : "cod_client"
